--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -330,7 +330,7 @@
                 <div style="prosition:abosolute;background-color: rgba(103, 86, 86, 0.85);">
                     <p style="position:absolute;left:30px;"><img src="https://img1.doubanio.com/view/subject/m/public/s32281237.jpg" style="width:115px;height:172px"></p>
                     <div id="title">
-                        <p style="position:absolute;left;50px;font-size:18px;color:#fff;">标题</p>
+                        <p style="position:absolute;left;500px;font-size:18px;color:#fff;">标题</p>
                     </div>
                 </div>
             </div>
@@ -1140,6 +1140,66 @@ if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
        </script><!--饼图-->
+
+<!--堆积柱状图-->
+<script type="text/javascript">
+var dom = document.getElementById("p2_x2");
+var myChart = echarts.init(dom,'walden');
+var app = {};
+option = null;
+app.title = '堆叠条形图';
+
+option = {
+    tooltip : {
+        trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    legend: {
+        data: [
+        {% for i in score_index %}
+        '{{ i.name }}',
+        {% endfor %}
+        ]
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis:  {
+        type: 'value'
+    },
+    yAxis: {
+        type: 'category',
+        data: ['4分以下','4-5分','5-6分','6-7分','7-8分','8-9分','9分以上']
+    },
+    series: [
+        {% for i in score_index%}
+        {
+            name:'{{ i.name }}',
+            type:'bar',
+            stack: '总量',
+            label: {
+                normal: {
+                    show: true,
+                    position: 'insideRight'
+                }
+            },
+            data:{{ i.data }}
+        },
+        {% endfor %}
+
+    ]
+};;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
+
+
 <script type="text/javascript">
 var dom = document.getElementById("x2_1");
 var myChart = echarts.init(dom,'walden');
@@ -1298,7 +1358,7 @@ option = {
     legend: {
         data:[
         {% for i in score_index %}
-        '{{ i.element }}',
+        '{{ i.name }}',
         {% endfor %}
         ]
     },
@@ -1324,7 +1384,7 @@ option = {
     series: [
         {% for i in score_index%}
         {
-            name:'{{ i.element }}',
+            name:'{{ i.name }}',
             type:'line',
             stack: '总量',
             data:{{ i.data }}
@@ -1339,7 +1399,7 @@ if (option && typeof option === "object") {
        </script>
 <!--嵌套环形图-->
 <script type="text/javascript">
-var dom = document.getElementById("p2_x2");
+var dom = document.getElementById("");
 var myChart = echarts.init(dom,'walden');
 var app = {};
 option = null;
@@ -1467,12 +1527,12 @@ option = {
            }
         },
         indicator: [
-           { name: '中国', max: 2000},
-           { name: '美国', max: 2000},
-           { name: '日本', max: 2000},
-           { name: '法国', max: 2000},
-           { name: '英国', max: 2000},
-           { name: '印度', max: 2000}
+           { name: '美国', max: 5000},
+           { name: '法国', max: 5000},
+           { name: '英国', max: 1000},
+           { name: '中国', max: 5000},
+           { name: '德国', max: 1000},
+           { name: '日本', max: 1000}
         ]
     },
     series: [{
@@ -1481,7 +1541,7 @@ option = {
         // areaStyle: {normal: {}},
         data : [
             {
-                value : [1430, 1905, 1203, 852, 940, 681],
+                value : [4604, 125, 465, 4108, 92, 284],
                 name : '作者数量'
             }
         ]
