--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -1,80 +1,19 @@
 <!DOCTYPE html>
-
-<!--{% load static %}-->
-
 <html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="A high-quality &amp; free Bootstrap admin dashboard template pack that comes with lots of templates and components.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/dataTool.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/simplex.js"></script>
     <script type="text/javascript" src="../../static/js/wordcloud.js"></script>
-    <script type="text/javascript" src="../../static/js/dark.js"></script>
     <script type="text/javascript" src="../../static/js/macarons.js"></script>
     <script type="text/javascript" src="../../static/js/walden.js"></script>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="../../static/js/jquery.colorbox.js"></script>
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="../../static/css/shards-dashboards.1.1.0.min.css">
-    <link rel="stylesheet" href="../../static/css/extras.1.1.0.min.css">
-    <link rel="stylesheet" href="../../static/css/colorbox.css" />
 
     <link rel="stylesheet" href="../../static/css/index.css">
 
     <title>计算机类图书信息分析</title>
-
-    <script type="text/javascript">
-
-			$(document).ready(function(){
-
-				$(".iframe").colorbox({iframe:true, width:"80%", height:"80%"});
-
-				$(".callbacks").colorbox({
-
-					onOpen:function(){ alert('onOpen: colorbox is about to open'); },
-
-					onLoad:function(){ alert('onLoad: colorbox has started to load the targeted content'); },
-
-					onComplete:function(){ alert('onComplete: colorbox has displayed the loaded content'); },
-
-					onCleanup:function(){ alert('onCleanup: colorbox has begun the close process'); },
-
-					onClosed:function(){ alert('onClosed: colorbox has completely closed'); }
-
-				});
-
-
-
-				$('.non-retina').colorbox({rel:'group5', transition:'none'})
-
-				$('.retina').colorbox({rel:'group5', transition:'none', retinaImage:true, retinaUrl:true});
-
-
-
-				//Example of preserving a JavaScript event for inline calls.
-
-				$("#click").click(function(){
-
-					$('#click').css({"background-color":"#f00", "color":"#fff", "cursor":"inherit"}).text("Open this window again and this message will still be here.");
-
-					return false;
-
-				});
-
-			});
-
-		</script>
-
 
     <style type="text/css">
             .player{
@@ -255,6 +194,7 @@
 
 <div id="wrap">
     <div id="main">
+
         <ul id="pageUl" type="circle">
             <li id="pageUlLi1" class="pageUlLi">&nbsp;</li>
             <li id="pageUlLi2" class="pageUlLi">&nbsp;</li>
@@ -262,6 +202,7 @@
             <li id="pageUlLi4" class="pageUlLi">&nbsp;</li>
             <li id="pageUlLi5" class="pageUlLi">&nbsp;</li>
         </ul>
+
         <div id="page1" class="page">
 
             <div class="homepage-banner">
@@ -274,9 +215,9 @@
                         </p>
                     </div>
                     <div class="mask">
-                        <img src="../../static/img/shade.png" width="auto" height="auto">
+                        <img src="../../static/img/shade.png" width="100%" height="100%">
                     </div>
-                    <video autoplay loop class="fillScreen" poster="../../static/img/static.png">
+                    <video autoplay loop class="fillScreen" width="100%" poster="../../static/img/static.png">
                         <source src="../../static/fonts/satellite.mp4" type="video/mp4"/>
                         <source src="../../static/fonts/satellite.webm" type="video/webm"/>
                         Please upgrade your browser, it does not support the video tag.
@@ -340,8 +281,10 @@
 
 
         </div>
+
         <div id="page4" class="page" style="position:relative">
         </div>
+
         <div id="page5" class="page">
           <p>  {% for i in tag1 %}
                 {{ i.tag }}
@@ -1787,69 +1730,7 @@ if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
        </script>
-<!--弹出层-->
-<script type="text/javascript">
-        //普通显示
-        $(function(){
-            $("#ShowButton").click(
-            function(){
-                if($("#ShowDiv").css("display")=='none'){
-                    $("#ShowDiv").show();
-                    $("#ShowDiv").html("show()<br>hide()");
-                    $("#ShowButton").val("隐藏");
-                }else{
-                    $("#ShowDiv").hide();
-                    $("#ShowButton").val("显示");
-                }
-            });
-        });
 
-        //动画显示-1
-        $(function(){
-            $("#ShowButton_1").click(
-            function(){
-                if($("#ShowDiv").css("display")=='none'){
-                    $("#ShowDiv").show(1000);
-                    $("#ShowDiv").html("show(1000)<br>hide(1000)");
-                    $("#ShowButton_1").val("隐藏");
-                }else{
-                    $("#ShowDiv").hide(1000);
-                    $("#ShowButton_1").val("显示");
-                }
-            });
-        });
-
-        //动画显示-2
-        $(function(){
-        $("#ShowButton_2").click(
-            function(){
-                 if($("#ShowDiv").css("display")=='none'){
-                    $("#ShowDiv").slideDown();
-                    $("#ShowDiv").html("slideDown()<br>slideUp()");
-                    $("#ShowButton_2").val("隐藏");
-                 }else{
-                    $("#ShowDiv").slideUp();
-                    $("#ShowButton_2").val("显示");
-                 }
-            });
-        });
-
-        //动画显示-3
-        $(function(){
-            $("#ShowButton_3").click(
-            function(){
-                 if($("#ShowDiv").css("display")=='none'){
-                    $("#ShowDiv").fadeIn(2000);
-                    $("#ShowDiv").html("fadeIn()<br>fadeOut()");
-                    $("#ShowButton_3").val("隐藏");
-                }else{
-                    $("#ShowDiv").fadeOut(2000);
-                    $("#ShowButton_3").val("显示");
-                }
-            });
-        });
-
-</script>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -1860,9 +1741,6 @@ if (option && typeof option === "object") {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 <script src="https://unpkg.com/shards-ui@latest/dist/js/shards.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
-<script src="../../static/js/extras.1.1.0.min.js"></script>
-<script src="../../static/js/shards-dashboards.1.1.0.min.js"></script>
-<script src="../../static/js/app/app-blog-overview.1.1.0.js"></script>
 
 
 
