--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -5,11 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/simplex.js"></script>
     <script type="text/javascript" src="../../static/js/wordcloud.js"></script>
-    <script type="text/javascript" src="../../static/js/macarons.js"></script>
     <script type="text/javascript" src="../../static/js/walden.js"></script>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    
+    <!--弹出层-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nifty Modal Window Effects with CSS Transitions and Animations" />
+    <meta name="keywords" content="modal, window, overlay, modern, box, css transition, css animation, effect, 3d, perspective" />
+    <meta name="author" content="Codrops" />
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../../static/css/default.css" />
+    <link rel="stylesheet" type="text/css" href="../../static/css/component.css" />
+    <!-- 弹出层 -->
 
     <link rel="stylesheet" href="../../static/css/index.css">
 
@@ -78,14 +87,16 @@
             position:absolute;
             top:80px;
             left:10px;
-			background-image:url('../../static/img/上一.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			height:280px;
             }
             #p2_s11{
             position:absolute;
             top:0px;
             left:0px;
-			background-image:url('../../static/img/上一.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			height:350px;
 			width:380px;
             }
@@ -93,43 +104,51 @@
             position:absolute;
             top:0px;
             left:385px;
-			background-image:url('../../static/img/上一.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			height:350px;
 			width:300px;
             }
             #p2_s2{
             position:absolute;
-			background-image:url('../../static/img/上二.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			top:80px;left:560px;
 			height:480px;
 			width:820px;
             }
             #p2_s3{
-			background-image:url('../../static/img/上三.png');
-			top:80px;
+            position: absolute;
+            top: 80px;
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			height:380px;
             }
             #p2_x1{
             position:absolute;
-			background-image:url('../../static/img/下一.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			top:370px;left:10px;
 			height:280px;
             }
             #p2_x2{
             position:absolute;
-			background-image:url('../../static/img/下二.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			top:570px;left:560px;
 			height:350px;
 			width:820px;
             }
             #p2_x3{
-			background-image:url('../../static/img/下三.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			top:470px;
 			height:400px;
             }
             #p2_x2 #x2_1{
             position:absolute;
-			background-image:url('../../static/img/下三.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
             left:0px;
             top;0px;
 			height:320px;
@@ -137,55 +156,39 @@
 			z-index: 1;
             }#p2_x2 #x2_2{
             position:absolute;
-			background-image:url('../../static/img/下三.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			left:410px;
 			height:320px;
 			width:400px;
             }#p2_x2 #x2_3{
             position:absolute;
-			background-image:url('../../static/img/下三.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
 			left:520px;
 			height:320px;
 			width:265px;
             }
             #p2_z1{
             position:absolute;
-            background-image:url('../../static/img/下三.png');
+            background: rgba(239, 247, 250, 1);
+            border-radius: 10px;
             top:660px;
             left:10px;
             height:280px;
-
-            <!--弹出层-->
-            #ShowDiv{
-                display:none;
-                width:300px;
-                height:100px;
-                border:1px solid #ccc;
-                border-right:2px solid #888;
-                border-bottom:2px solid #888;
-                background-color:#f9f9f9;
-                text-align:center;
-                padding-top:30px;
+            
+            button .md-trigger{
+                background: #c0392b;
+                height: 25px;
+                font-size: 0.2em;
             }
 
 
-            <!---->
-            .black_overlay {
-                display: none;
+            /*弹出层*/
+            .big{
                 position: absolute;
-                top: 0%;
-                left: 0%;
-                width: 100%;
-                height: 100%;
-                background-color: black;
-                z-index: 1001;
-                -moz-opacity: 0.8;
-                opacity: .80;
-                filter: alpha(opacity=80);
+                z-index: 1000;
             }
-
-
-
 
     </style>
 </head>
@@ -232,8 +235,57 @@
         </div>
 
         <div style="background-color: #ffffff;position:relative" id="page2" class="page">
+        
+            <div class="md-modal md-effect-1" id="modal-1">
+                <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                        <div style="position:relative;left:20%;width:60%;height:800px;">
+                            <h3>作者国籍雷达图</h3>
+                            <div  id="tanchu" style="position:relative;left:10%;width:80%;height:80%"></div>
+                            <button class="md-close">Close</button>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+            </div>
+
+            <div class="md-modal md-effect-1" id="modal-2">
+                <div class="md-content" style="position:absolute;width:100%;height:100%;">
+                    <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
+                        <div style="position:relative;left:20%;width:60%;height:800px;">
+                            <h3>作者国籍雷达图</h3>
+                            <div  id="tanchu" style="position:relative;left:10%;width:80%;height:80%"></div>
+                            <button class="md-close">Close</button>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+            </div>
+
+            <div class="container" style="position:absolute;width:100%;height:100%;">
+                    <div class="column" style="position:absolute;top:9%;left:24%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-1" style="background: #c0392b;font-size: 1em">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:9%;left:67%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-2">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:40%;left:24%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-3">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:72%;left:24%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-4">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:61%;left:67%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-5">Show</button>
+                    </div>
+                    <div class="column" style="position:absolute;top:52%;left:95%;z-index: 1000;">
+                        <button class="md-trigger" data-modal="modal-6">Show</button>
+                    </div>
+            </div>
             
-            <p style="position:absolute;top:25px;right:1600px;"><img src="../../static/img/数据分析2.png"></p>
+            <p style="position:absolute;top:2%;right:83%;"><img src="../../static/img/数据分析2.png"></p>
             <p style="position:absolute;top:10px;right:350px"><img width="80%" height="80%" src="../../static/img/全部数据.png"></p>
             <p style="position:absolute;top:10px;right:50px"><img width="80%" height="80%" src="../../static/img/有效数据.png"></p>
             <div id="p2_s1" class="left">
@@ -282,9 +334,9 @@
 
         </div>
 
-        <div id="page4" class="page" style="position:relative">
+        <div id="page4" class="page">
+            
         </div>
-
         <div id="page5" class="page">
           <p>  {% for i in tag1 %}
                 {{ i.tag }}
@@ -295,6 +347,60 @@
 
     </div>
 </div>
+
+
+
+
+<!-- 弹出层图表 -->
+
+<script type="text/javascript">
+            var dom = document.getElementById("tanchu");
+            var myChart = echarts.init(dom,'walden');
+            var app = {};
+            option = null;
+            option = {
+                tooltip: {},
+                legend: {
+                    x: 'left',
+                    data: ['预算分配']
+                },
+                radar: {
+                    // shape: 'circle',
+                    name: {
+                        textStyle: {
+                            color: '#fff',
+                            backgroundColor: '#999',
+                            borderRadius: 3,
+                            padding: [3, 5]
+                       }
+                    },
+                    indicator: [
+                       { name: '美国', max: 5000},
+                       { name: '法国', max: 5000},
+                       { name: '英国', max: 1000},
+                       { name: '中国', max: 5000},
+                       { name: '德国', max: 1000},
+                       { name: '日本', max: 1000}
+                    ]
+                },
+                series: [{
+                    name: '预算 vs 开销（Budget vs spending）',
+                    type: 'radar',
+                    // areaStyle: {normal: {}},
+                    data : [
+                        {
+                            value : [4604, 125, 465, 4108, 92, 284],
+                            name : '作者数量'
+                        }
+                    ]
+                }]
+            };;
+            if (option && typeof option === "object") {
+                myChart.setOption(option, true);
+            }
+        </script>
+
+<!-- page2图表 -->
 
 <script type="text/javascript">
 var dom = document.getElementById("");
@@ -940,7 +1046,7 @@ option = {
 if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
-       </script><!--p2_s1 饼图-->
+</script><!--p2_s1 饼图-->
 <script type="text/javascript">
 var dom = document.getElementById("x2_3");
 var myChart = echarts.init(dom,'walden');
@@ -1733,18 +1839,23 @@ if (option && typeof option === "object") {
 
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-<script src="https://unpkg.com/shards-ui@latest/dist/js/shards.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
+<!-- 弹出层 -->
+<script src="../../static/js/classie.js"></script>
+<script src="../../static/js/modalEffects.js"></script>
+<!-- for the blur effect -->
+<!-- by @derSchepp https://github.com/Schepp/CSS-Filters-Polyfill -->
+<script>
+    // this is important for IEs
 
+    var polyfilter_scriptpath = '/js/';
+</script>
 
+<script src="../../static/js/modernizr.custom.js"></script>
+<script src="../../static/js/cssParser.js"></script>
+<script src="http://www.jq22.com/js/jq.js"></script>
 
 </body>
+<!-- 整页翻动 -->
 <script type="text/javascript">
     //改变窗口大小时调整图片大小
     window.onload = resizeImages;
@@ -1843,6 +1954,7 @@ if (option && typeof option === "object") {
     }
 
 </script>
+
 <script type="text/javascript">
             //jQuery is required to run this code
             $( document ).ready(function() {
