--- a/learn/templates/box.html
+++ b/learn/templates/box.html
@@ -1,99 +1,103 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<script type="text/javascript" src="../../static/js/semantic.js"></script>
+	<link rel="stylesheet" href="../../static/css/semantic.css"></link>
+	<script type="text/javascript" src="../../static/js/jquery-2.2.1.min.js"></script>
+	<style type="text/css">
+		#index_text i{
+			color: #fff;
+		}
+		#index_text p{
+			color: #fff;
+		}
+		#index_text h3{
+			color: #fff;
+		}
+	</style>
+</head>
+<body>
+	<div class="ui text container segment" style="background-color: rgba(103, 86, 86, 0.5);">
+		<div class="ui divided items">
+			<div class="item">
+				<div class="content ">
+					<div class="ui small image">
+						<svg width="150" height="150">
+							<image xlink:href="https://img1.doubanio.com/view/subject/m/public/s32281237.jpg" x="0" y="0" width="100%" height="100%"></image>
+						</svg>
+					</div>
+					<div class="menu" id="index_text" style="position: absolute;top: 5%;left: 25%">
+							<h3 class="ui header">The title</h3>
+							<i>作者： </i>
+							<i class="item">吴军</i>
+							<i class="item">/</i>
+							<i class="item">出版社： </i>
+							<i >人民出版社 /  </i>
+							<i >评分：</i>
+							<i >9.3 / </i>
+							<i >评分人数：</i>
+							<i >4655 / </i>
+							<p>短评情感指数：</p>
+						<div class="extra">
+							<div class="ui label right aligned">
+								tag1
+							</div>
+							<div class="ui label right aligned">
+								tag2
+							</div>
 
-	<head>
-
-		<meta charset='utf-8'/>
-
-		<title>Colorbox Examples</title>
-
-		<style>
-
-			body{font:12px/1.2 Verdana, sans-serif; padding:0 10px;}
-
-			a:link, a:visited{text-decoration:none; color:#416CE5; border-bottom:1px solid #416CE5;}
-
-			h2{font-size:13px; margin:15px 0 0 0;}
-
-		</style>
-
-		<link rel="stylesheet" href="../../static/css/colorbox.css" />
-
-		<script src="../../static/js/jquery-1.9.1.min.js"></script>
-
-		<script src="../../static/js/jquery.colorbox.js"></script>
-
-		<script>
-
-			$(document).ready(function(){
-
-				$(".iframe").colorbox({iframe:true, width:"80%", height:"80%"});
-
-				$(".callbacks").colorbox({
-
-					onOpen:function(){ alert('onOpen: colorbox is about to open'); },
-
-					onLoad:function(){ alert('onLoad: colorbox has started to load the targeted content'); },
-
-					onComplete:function(){ alert('onComplete: colorbox has displayed the loaded content'); },
-
-					onCleanup:function(){ alert('onCleanup: colorbox has begun the close process'); },
-
-					onClosed:function(){ alert('onClosed: colorbox has completely closed'); }
-
-				});
-
-
-
-				$('.non-retina').colorbox({rel:'group5', transition:'none'})
-
-				$('.retina').colorbox({rel:'group5', transition:'none', retinaImage:true, retinaUrl:true});
-
-
-
-				//Example of preserving a JavaScript event for inline calls.
-
-				$("#click").click(function(){
-
-					$('#click').css({"background-color":"#f00", "color":"#fff", "cursor":"inherit"}).text("Open this window again and this message will still be here.");
-
-					return false;
-
-				});
-
-			});
-
-		</script>
-
-	</head>
-
-	<body>
-
-		<p><a class='iframe'>Outside Webpage (Iframe)</a></p>
-
-		<!-- This contains the hidden content for inline calls -->
-
-		<div style='display:none'>
-
-			<div id='inline_content' style='padding:10px; background:#fff;'>
-
-			<p><strong>This content comes from a hidden element on this page.</strong></p>
-
-			<p>The inline option preserves bound JavaScript events and changes, and it puts the content back where it came from when it is closed.</p>
-
-			<p><a id="click" href="#" style='padding:5px; background:#ccc;'>Click me, it will be preserved!</a></p>
-
-
-
-			<a class="ajax" href="../content/ajax.html">Click here to load new content</a></p>
-
+						</div>
+					</div>
+				</div>
 			</div>
+			<div class="item">
+				<div class="content">
+					<div class="header">
+						The title
+					</div>
+					<div class="description">
+						<p>something</p>
+					</div>
+					<div class="extra">
+						<div class="ui label">
+							tag1
+						</div>
+						<div class="ui label">
+							tag2
+						</div>
 
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="content">
+					<div class="header">
+						The title
+					</div>
+					<div class="description">
+						<p>something</p>
+					</div>
+					<div class="extra">
+						<div class="ui label">
+							tag1
+						</div>
+						<div class="ui label">
+							tag2
+						</div>
+
+					</div>
+				</div>
+			</div>
 		</div>
-
-	<script src="http://www.jq22.com/js/jq.js"></script>
-
+		<div class="ui pagination menu">
+			<a class="active item" href="#"> < </a>
+			<div class="disable item">
+				page 1 of 3
+			</div>
+			<a class="item" href="#"> > </a>
+		</div>
+	</div>
 </body>
-
 </html>
