--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -1904,6 +1904,8 @@ if (option && typeof option === "object") {
 
 </script>
 
+<!-- video -->
+
 <script type="text/javascript">
             //jQuery is required to run this code
             $( document ).ready(function() {
