--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,44 +1,81 @@
+html,
+body {
+    height: 100%;
+}
 
+body,
+ul,
+li,
+a,
+p,
+div {
+    padding: 0px;
+    margin: 0px;
+}
 
-        .div1{
-                position:absolute;
-                top:30px;
-                left:0px;
-        }
-        .div2{
-                position:absolute;
-                top:550px;
-                left:0px;
-        }
-        .div3{
-                position:absolute;
-                top:30px;
-                right:0px;
-        }
-        .div4{
-                position:absolute;
-                top:570px;
-                left:600px;
-        }
-        .div5{
-                position:absolute   ;
-                left:600px;
-        }
-        h1{
-                color:#000;
-                text-align:center
-        }
-        .logo{
-                position:absolute;
-                top:200px;
-                width:100%;
-                height:100%;
-                text-align:center;
-        }
-        .textdown{
-                position:absolute;
-                top:850px;
-                width:100%;
-                height:50px;
-                text-align:center;
-        }
+#wrap {
+    overflow: hidden;
+    width: 100%;
+}
+
+#main {
+    top: 0;
+    position: relative;
+}
+
+.page {
+    width: 100%;
+    margin: 0;
+}
+
+#pageUl {
+    position: fixed;
+    right: 10px;
+}
+#page3{
+    position:relative;
+    text-align:center;
+}
+
+.div1{
+    position:absolute;
+    top:30px;
+    left:0px;
+}
+.div2{
+    position:absolute;
+    top:550px;
+    left:0px;
+}
+.div3{
+    position:absolute;
+    top:30px;
+    right:0px;
+}
+.div4{
+    position:absolute;
+    top:570px;
+    left:600px;
+}
+.div5{
+    position:absolute   ;
+    left:600px;
+}
+h1{
+    color:#000;
+    text-align:center
+}
+.logo{
+    position:absolute;
+    top:200px;
+    width:100%;
+    height:100%;
+    text-align:center;
+}
+.textdown{
+    position:absolute;
+    top:850px;
+    width:100%;
+    height:50px;
+    text-align:center;
+}
