--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -29,7 +29,7 @@
     <title>计算机类图书信息分析</title>
 
     <style type="text/css">
-
+    
     html,
     body {
         height: 100%;
@@ -647,7 +647,7 @@
                 <div class="ui container segment" style="background-color: rgba(103, 86, 86, 0.75);">
                     <div class="ui divided items">
                         <div class="ui container">
-                            <<a href="http://127.0.0.1:8000/list">
+                            <a href="http://127.0.0.1:8000/list">
                                 <h2 class="ui center aligned header" style="color: #fff;">全部图书榜单信息</h2>
                             </a>
                         </div>
