--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -643,7 +643,7 @@
 
             </div>
 
-            <div id="page4" class="page" style="position:relative;background-image:url('https://img1.doubanio.com/view/activity_page/raw/public/p3819.jpg');">
+            <div id="page4" class="page" style="position:relative;background-image:url('../../static/img/p3_back.jpg');">
                 <div class="ui container segment" style="background-color: rgba(103, 86, 86, 0.75);">
                     <div class="ui divided items">
                         <div class="ui container">
@@ -690,13 +690,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="page5" class="page">
-                  <p>  {% for i in tag1 %}
-                    {{ i.tag }}
-                    {% endfor %}
-                </p>
 
-            </div>
 
         </div>
     </div>
@@ -823,7 +817,7 @@
                             a: {
                                 align: 'center',
                                 color: '#fff',
-                                fontSize: 18,
+                                fontSize: 48,
                                 textShadowBlur: 2,
                                 textShadowColor: '#000',
                                 textShadowOffsetX: 0,
@@ -838,7 +832,7 @@
                             color: '#ff8811',
                             textBorderColor: '#000',
                             textBorderWidth: 1,
-                            fontSize: 22
+                            fontSize: 48
                         }
                     }
                 }
